; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ichwd/extr_ichwd.c_ichwd_tmr_enable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ichwd/extr_ichwd.c_ichwd_tmr_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ichwd_softc = type { i32, i32 }

@TCO1_CNT = common dso_local global i32 0, align 4
@TCO_CNT_PRESERVE = common dso_local global i32 0, align 4
@TCO_TMR_HALT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"timer enabled\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ichwd_softc*)* @ichwd_tmr_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ichwd_tmr_enable(%struct.ichwd_softc* %0) #0 {
  %2 = alloca %struct.ichwd_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.ichwd_softc* %0, %struct.ichwd_softc** %2, align 8
  %4 = load %struct.ichwd_softc*, %struct.ichwd_softc** %2, align 8
  %5 = load i32, i32* @TCO1_CNT, align 4
  %6 = call i32 @ichwd_read_tco_2(%struct.ichwd_softc* %4, i32 %5)
  %7 = load i32, i32* @TCO_CNT_PRESERVE, align 4
  %8 = and i32 %6, %7
  store i32 %8, i32* %3, align 4
  %9 = load %struct.ichwd_softc*, %struct.ichwd_softc** %2, align 8
  %10 = load i32, i32* @TCO1_CNT, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @TCO_TMR_HALT, align 4
  %13 = xor i32 %12, -1
  %14 = and i32 %11, %13
  %15 = call i32 @ichwd_write_tco_2(%struct.ichwd_softc* %9, i32 %10, i32 %14)
  %16 = load %struct.ichwd_softc*, %struct.ichwd_softc** %2, align 8
  %17 = getelementptr inbounds %struct.ichwd_softc, %struct.ichwd_softc* %16, i32 0, i32 0
  store i32 1, i32* %17, align 4
  %18 = load %struct.ichwd_softc*, %struct.ichwd_softc** %2, align 8
  %19 = getelementptr inbounds %struct.ichwd_softc, %struct.ichwd_softc* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @ichwd_verbose_printf(i32 %20, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @ichwd_read_tco_2(%struct.ichwd_softc*, i32) #1

declare dso_local i32 @ichwd_write_tco_2(%struct.ichwd_softc*, i32, i32) #1

declare dso_local i32 @ichwd_verbose_printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
